<resources>
    <string name="app_name">HTM-Referrals</string>
    <string name="userNameEditText">Enter user name</string>
    <string name="passwordEditText">Enter pRassword</string>
    <string name="login_text">Log In</string>
    <string name="image_description">logo</string>
    <string name="spacer">spacer</string>
    <string name="loggin_in_dialog_title">Logging in…</string>
    <string name="loggin_in_dialog_message">Please wait</string>
    <string name="login_failed_dialog_title">Log in failed</string>
    <string name="login_failed_dialog_message">Please check the credentials</string>
    <string name="mcareform_back_confirm_dialog_message">Are you sure you want to go back?</string>
    <string name="mcareform_back_confirm_dialog_title">Confirm form close</string>
    <string name="mcareyes_button_label">Yes</string>
    <string name="mcareno_button_label">No</string>
    <string name="home_hh_label">Household</string>
    <string name="home_ec_label">ELCO</string>
    <string name="home_fp_label">FP</string>
    <string name="home_anc_label">ANC</string>
    <string name="home_pnc_label">PNC</string>
    <string name="home_child_label">Child</string>
    <string name="home_report_label">Reporting</string>
    <string name="register_label">Register</string>
    <string name="home_videos_label">Videos</string>
    <string name="videos_cannot_play_video_dialog_title">Cannot play video.</string>
    <string name="videos_IEC_not_installed_dialog_message">Please install IEC application to play the videos.
    </string>
    <string name="videos_unknown_error_dialog_message">Unable to play video due to technical error.</string>
    <string name="settings_logout_confirm_title">Confirm Log out</string>
    <string name="settings_logout_confirm_dialog_message">Are you sure you want to log out? All the data will be
        cleared.
    </string>
    <string name="unsynced_forms_count_message">forms unsynced</string>
    <string name="str_next">"Next &gt;&gt;"</string>
    <string name="str_previous">"&lt;&lt; Previous"</string>
    <string name="str_page_info">Page {0} of {1}</string>
    <string name="header_name">NAME</string>
    <string name="header_ec_no">EC NO.</string>
    <string name="header_gplsa">GPLSA</string>
    <string name="header_fp">FP METHOD</string>
    <string name="header_children">CHILDREN</string>
    <string name="header_status">STATUS</string>
    <string name="header_edit"></string>
    <string name="couple_selection">All Eligible Couples</string>
    <string name="str_ec_search_hint">Search</string>
    <string name="str_fp_search_hint">Search FP Register</string>
    <string name="str_pnc_search_hint">Search PNC Register</string>
    <string name="str_child_search_hint">Search</string>
    <string name="label_sorted_by">Sorted By:</string>
    <string name="label_village">, Filtered By:</string>
    <string name="ec_register_wife_age">({0})</string>
    <string name="ec_register_male_child">Male\n{0}</string>
    <string name="ec_register_female_child">Female\n{0}</string>
    <string name="ec_register_no_fp">No FP</string>
    <string name="status_delivery">Delivery:</string>
    <string name="str_lmp">LMP:</string>
    <string name="str_edd">EDD:</string>
    <string name="str_anc">ANC</string>
    <string name="str_pnc">PNC</string>
    <string name="str_fp">FP</string>
    <string name="str_number_of_strips">No. strips:</string>
    <string name="str_number_given">No. Given:</string>
    <string name="str_gravida">G</string>
    <string name="str_parity">P</string>
    <string name="str_number_of_living_children">L</string>
    <string name="str_number_of_still_births">S</string>
    <string name="str_number_of_abortions">A</string>
    <string name="str_out_of_area">(O/A)</string>
    <string name="sort_by_name_label">Name (A to Z)</string>
    <string name="sort_by_ec_number_label">EC Number</string>
    <string name="sort_by_date_of_delivery_label">follow_up_date of Delivery</string>
    <string name="sort_by_sc_label">SC</string>
    <string name="sort_by_st_label">ST</string>
    <string name="sort_by_high_priority_label">High Priority (HP)</string>
    <string name="sort_by_high_risk_pregnancy_label">HRP</string>
    <string name="sort_by_high_risk_label">High Risk (HR)</string>
    <string name="sort_by_bpl_label">BPL</string>
    <string name="filter_by_all_label">All</string>
    <string name="filter_by_out_of_area_label">O/A</string>
    <string name="filter_by_leave_the_place_label">L/P</string>
    <string name="ec_register_title_in_short">ELCO</string>
    <string name="str_register_anc_form">Register ANC</string>
    <string name="str_register_fp_form">Register FP</string>
    <string name="str_register_child_form">Register Child</string>
    <string name="str_fp_change_form">FP Change</string>
    <string name="str_fp_change_fp_form">Change FP</string>
    <string name="str_record_ecp_form">Record ECP</string>
    <string name="str_edit_ec_form">Edit EC</string>
    <string name="str_close_ec_form">Close EC</string>
    <string name="report_month_sample_text">26/03 - 25/04</string>
    <string name="str_switch_language">Switch Language</string>
    <string name="str_register_anc_visit_form">ANC Visit</string>
    <string name="str_register_hb_test_form">Hb Test</string>
    <string name="str_register_ifa_form">IFA</string>
    <string name="str_register_tt_form">TT</string>
    <string name="str_register_delivery_plan_form">Delivery Plan</string>
    <string name="str_register_pnc_registration_form">PNC Registration</string>
    <string name="str_register_anc_investigations_form">ANC Investigations</string>
    <string name="str_register_anc_close_form">ANC Close</string>
    <string name="str_reporting">Reporting</string>
    <string name="str_videos">Videos</string>
    <string name="child_register_title_in_short">Child:</string>
    <string name="child_service_mode_overview">Overview</string>
    <string name="child_service_mode_immunization_0_to_9">Immunization 0-9</string>
    <string name="child_service_mode_immunization_9_plus">Immunization 9+</string>
    <string name="header_id_no">ID NO</string>
    <string name="header_dob">DOB</string>
    <string name="header_sick_status">SICK STATUS</string>
    <string name="header_last_service">LAST SERVICE</string>
    <string name="header_bcg">BCG</string>
    <string name="header_hep_b_birth">HEP B BIRTH</string>
    <string name="header_opv">OPV</string>
    <string name="header_pentavalent">PENTAVALENT</string>
    <string name="header_measles">MEASLES</string>
    <string name="header_opv_booster">OPV BOOSTER</string>
    <string name="header_dpt_booster">DPT BOOSTER</string>
    <string name="header_vitamin_a">VITAMIN A</string>
    <string name="thayi_label">Thayi:</string>
    <string name="mother_ec_label">Mother EC:</string>
    <string name="sort_by_child_age">Age</string>
    <string name="sort_by_child_hr">HR</string>
    <string name="str_child_immunizations">Child Immunizations</string>
    <string name="str_child_illness">Child Illness</string>
    <string name="str_child_close">Child Close</string>
    <string name="str_vitamin_a">Vitamin A</string>
    <string name="service_type_pnc">PNC</string>
    <string name="service_type_pentavalent_2">Pentavalent 2</string>
    <string name="service_type_bcg">BCG</string>
    <string name="service_type_pentavalent_3">Pentavalent 3</string>
    <string name="service_type_pentavalent_1">Pentavalent 1</string>
    <string name="service_type_opv_0">OPV 0</string>
    <string name="service_type_opv_1">OPV 1</string>
    <string name="service_type_opv_2">OPV 2</string>
    <string name="service_type_opv_3">OPV 3</string>
    <string name="service_type_dpt_booster_1">DPT Boost. 1</string>
    <string name="service_type_dpt_booster_2">DPT Boost. 2</string>
    <string name="service_type_opv_booster">OPV Boost</string>
    <string name="service_type_measles">Measles</string>
    <string name="service_type_measles_booster">Measles Booster</string>
    <string name="service_type_measles_booster_short">Measles B</string>
    <string name="service_type_hepb_0">Hep B</string>
    <string name="service_type_je">JE</string>
    <string name="service_type_mmr">MMR</string>
    <string name="service_type_vitamin_a">Vitamin A</string>
    <string name="service_type_illness_visit">Illness Visit</string>
    <string name="service_type_empty" />
    <string name="sick_visit">Sick Visit</string>
    <string name="illness_report"><b>Illness Report:</b> %s</string>
    <string name="illness_date">follow_up_date:</string>
    <string name="str_bcg">BCG</string>
    <string name="str_bcg_on">On</string>
    <string name="hep_b_birth">Hep B</string>
    <string name="opv">OPV</string>
    <string name="tt">TT</string>
    <string name="ifa">IFA</string>
    <string name="pentavalent">Pentavalent</string>
    <string name="measles">Measles</string>
    <string name="opv_booster">OPV Booster</string>
    <string name="dpt_booster">DPT Booster</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="service_type_pentavalent_1_short">Pentav 1</string>
    <string name="service_type_pentavalent_2_short">Pentav 2</string>
    <string name="service_type_pentavalent_3_short">Pentav 3</string>
    <string name="service_type_dpt_booster_1_short">DPT B1</string>
    <string name="service_type_dpt_booster_2_short">DPT B2</string>
    <string name="pentavalent_short">Pentav</string>
    <string name="fp_register_title_in_short">FP:</string>
    <string name="pnc_register_title_in_short">PNC:</string>
    <string name="header_method">METHOD</string>
    <string name="header_side_effects">SIDE EFFECTS</string>
    <string name="header_followup_refill">FOLLOW UP/REFILL</string>
    <string name="header_fp_prioritization_risks">RISKS</string>
    <string name="fp_register_service_mode_all_methods">All Methods</string>
    <string name="fp_register_service_mode_condom">Condom</string>
    <string name="fp_register_service_mode_dmpa">DMPA/Injectable</string>
    <string name="fp_register_service_mode_iucd">IUCD</string>
    <string name="fp_register_service_mode_ocp">OCP</string>
    <string name="fp_register_service_mode_female_sterilization">Female Sterilization</string>
    <string name="fp_register_service_mode_male_sterilization">Male Sterilization</string>
    <string name="choose_indicators_title">Chunguza Vidokezo Vifuatavyo Kwa Mama.Weka alama (✓) panapohusika.</string>
    <string name="indicator_high_bp">BP 140/90 au zaidi</string>
    <string name="indicator_hb_below_60">HB chini ya 60%</string>
    <string name="indicator_albumin">Albumin kwenye mkojo</string>
    <string name="indicator_sugar">Sukari kwenye mkojo</string>
    <string name="indicator_pregrancy_above_40_weeks">Umri wa mimba zaidi ya wiki 40</string>
    <string name="indicator_baby_dealth">Mtoto kufia tumboni</string>
    <string name="indicator_bad_baby_position">Mtoto amelala vibaya baada ya wiki 40</string>
    <string name="indicator_unproportional_pregnancy_height">Kimo cha mimba kikubwa/kidogo zaidi kuliko umri wake</string>
    <string name="mama_ameshauriwa_akajifungue_wapi">Mama ameshauriwa akajifungue wapi</string>
    <string name="jina_la_hospitali">Jina la hospitali</string>
    <string name="title_login">Login</string>
    <string name="button_sign_in">Sign In</string>
    <string name="powered_bt">Powered by OpenSRP</string>
    <string name="page_title_htmr">htmr</string>
    <string name="page_title_referral">Referral \nApplication</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="referral_reason">Referral Reason</string>
    <string name="client_name">Name</string>
    <string name="referral_date">Referral Date</string>
    <string name="referral_status">Referral Status</string>
    <string name="referral_services">Referral Services</string>
</resources>