<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="16dp"

    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/choose_indicators_title"
            android:textAllCaps="true"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkbox_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/indicator_high_bp"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkbox_hb_below_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/indicator_hb_below_60"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkbox_albumin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/indicator_albumin"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkbox_sugar_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/indicator_sugar"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkbox_umri_wa_mimba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/indicator_pregrancy_above_40_weeks"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkbox_baby_death"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/indicator_baby_dealth"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkbox_mlalo_wa_mtotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/indicator_bad_baby_position"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkbox_kimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/indicator_unproportional_pregnancy_height"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/mama_ameshauriwa_akajifungue_wapi"
            android:textAllCaps="true"
            android:textColor="@color/light_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/facility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/jina_la_hospitali"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="14sp" />

        <!--<Button-->
        <!--android:id="@+id/submit"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginTop="32dp"-->
        <!--android:background="@color/light_blue"-->
        <!--android:padding="8dp"-->
        <!--android:text="Tunza"-->
        <!--android:textColor="#fff"-->
        <!--android:textSize="16sp" />-->
    </LinearLayout>

</android.support.v7.widget.CardView>