<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:layout_marginTop="16dp"
                android:id="@+id/client_name"
                android:textColor="@color/black"
                android:text="@string/client_name"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:id="@+id/referral_reasons"
                android:text="@string/referral_reason"
                android:layout_centerVertical="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:id="@+id/ref_date"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:text="@string/referral_date"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="16dp"
                android:id="@+id/referral_service"
                android:text="@string/referral_services"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="match_parent">

            <TextView
                android:visibility="visible"
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center"
                android:text="@string/referral_status"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        </RelativeLayout>
        <View
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:id="@+id/status_color"/>


    </LinearLayout>

</RelativeLayout>
