<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:fitsSystemWindows="false"
    android:theme="@style/AppTheme.MaterialDesign.TranslucentStatus"
    tools:context=".LoginActivity">


    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            app:layout_heightPercent="50%"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/clint_adair" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="#398FE5" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/mToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="24dp"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:title=""
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_centerHorizontal="true"
            app:layout_marginTopPercent="30%"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fitsSystemWindows="false"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:layout_marginLeft="8dp"
                android:textStyle="bold"
                android:textColor="#306AA3"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="0dp"
                android:hint="@string/hint_username"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="14sp"
                app:met_floatingLabelText="Username"
                app:met_floatingLabel="normal"
                android:inputType="textCapWords|textPersonName"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                app:met_floatingLabelTextColor="@color/primary"/>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="0dp"
                android:hint="@string/hint_password"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="14sp"
                app:met_floatingLabelText="Password"
                app:met_floatingLabel="normal"
                android:inputType="textPassword"
                app:met_floatingLabelTextColor="@color/primary"/>

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/shape_round_button"
                android:text="@string/button_sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/powered_bt"
                android:textColor="@color/hint_text"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginTop="4dp"
                android:layout_height="24dp"
                android:layout_width="30dp"
                android:alpha="0.3"
                android:src="@drawable/coat_of_arms"/>
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_height="24dp"
                android:alpha="0.3"
                android:layout_width="56dp"
                android:src="@drawable/usaid_logo"/>
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_height="32dp"
                android:layout_width="64dp"
                android:alpha="0.3"
                android:src="@drawable/deloitte"/>
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_height="24dp"
                android:layout_width="72dp"
                android:alpha="0.3"
                android:src="@drawable/fhi360"/>
        </LinearLayout>


        <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="32dp"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:scaleType="centerCrop"
            android:src="@drawable/htmr_logo"/>

        <TextView android:layout_width="wrap_content"
            android:layout_alignTop="@id/logo"
            android:layout_toRightOf="@id/logo"
            android:paddingTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:text="@string/page_title_htmr"
            android:id="@+id/title_one"
            android:textStyle="bold"
            android:textColor="@color/mdtp_white"
            android:textSize="32sp"/>

        <TextView android:layout_width="wrap_content"
            android:layout_below="@id/title_one"
            android:id="@+id/title_two"
            android:layout_toRightOf="@id/logo"
            android:paddingTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:text="@string/page_title_referral"
            android:textColor="@color/mdtp_white"
            android:textSize="18sp"/>

        <TextView android:layout_width="wrap_content"
            android:layout_below="@id/title_two"
            android:layout_toRightOf="@id/logo"
            android:paddingTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textColor="@color/mdtp_white"
            android:textSize="16sp"/>
    </android.support.percent.PercentRelativeLayout>

</android.support.design.widget.CoordinatorLayout>